--- a/Style/style.css
+++ b/Style/style.css
@@ -25,9 +25,9 @@ main{
 }
 
 .nav-title{
-    font-size: 32px;
+    font-size: 38px;
     font-weight: bold;
-    padding: 31px 160px; 
+    padding: 31px 192px; 
 }
 
 /* BD-2.0 style */
@@ -36,12 +36,12 @@ main{
     color: #006A50;
     border: 1px solid #006A50;
     border-radius: 8px;
-    height: 52px;
-    width: 118px;
-    font-size: 18px;
+    height: 62px;
+    width: 141px;
+    font-size: 23px;
     font-weight: 600;
     padding: 15px 30px;
-    margin: 24px 160px;
+    margin: 24px 192px;
     font-family: "Fira Sans", serif;
 }
 
@@ -50,34 +50,74 @@ main{
     align-items: center;
     justify-content: center;
     background-color: #C6E4D6;
-    gap: 350px;
-    margin: 19px 160px;
+    gap: 160px;
+    margin: 19px 192px;
     border-radius: 24px;
     height: 560px;
 }
 
 .header-subtitle{
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 400;
     margin-bottom: 15px;
 }
 
 .header-title{
-    font-size: 56px;
+    font-size: 66px;
     font-weight: 800;
     margin-bottom: 24px;
 }
 
 .explore-btn{
     color: #FFFFFF;
-    height: 56px;
-    width: 270px;
+    height: 67px;
+    width: 324px;
     background-color: #006A50;
     padding: 17px 34px;
-    font-size: 16px;
+    font-size: 22px;
     font-family: "Fira Sans", serif;
     font-weight: 500;
     border-radius: 8px;
     border: none;
+
+}
+
+/* pillar section style */
+
+.Pillars-of-bd{
+    margin: 80px 192px;
+}
+
+.pillar-title{
+    font-size: 47px;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
+
+.pillar-box{
+    display: flex;
+    gap: 26px;
+}
+
+.box-style{
+    height: 210px;
+    width: 360px;
+    background-color: white;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    padding: 27px;
+}
+
+.piller-header{
+    font-size: 25px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.89);
+    margin-top: 24px;
+    margin-bottom: 12px;
+}
+
+.header-description{
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.781);
 
 }
