--- a/Style/style.css
+++ b/Style/style.css
@@ -33,6 +33,11 @@ main {
     background-color: #F1F1F3;
 }
 
+footer{
+    background-color: #F1F1F3;
+    padding-top: 80px;
+}
+
 .nav-bar {
     display: flex;
     justify-content: space-between;
@@ -459,4 +464,38 @@ main {
     font-weight: 500;
     border-radius: 0px 12px 12px 0;
     border: none;
+}
+
+/* footer section style */
+
+.footer-section{
+    height: 226px;
+    width: 1600px;
+    padding: 50px 160px;
+    margin-top: 80px;
+    background-color: white;
+} 
+
+.footer-content{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-title{
+    font-size: 38px;
+    font-weight: 700;
+    margin: 32px 32px;
+    text-align: center;
+    
+}
+
+.footer-img{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    margin-top: 32px;
+}
+
+hr{
+    opacity: 0.3;
 }
